# muffin-jinja2

./: .bumpversion.cfg  .coveragerc  .git-commits.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  Changelog  LICENSE  MANIFEST.in  Makefile  README.rst  muffin_jinja2.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
muffin_jinja2/: __init__.py  _compat.py
requirements/: requirements.txt
tests/: conftest.py  template.html  test_muffin_jinja2.py
