[tool.poetry]
name = "muffin-jinja2"
version = "1.8.1"
description = "Support Jinja2 templates for Muffin Framework"
readme = "README.rst"
license = "MIT"
authors = ["Kirill Klenov <horneds@gmail.com>"]
keywords = ["asyncio", "trio", "asgi", "web", "muffin", "jinja", "jinja2"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
homepage = "https://github.com/klen/muffin-jinja2"
repository = "https://github.com/klen/muffin-jinja2"

[tool.poetry.dependencies]
python = "^3.9"
muffin = "*"
jinja2 = "*"

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-mypy = "*"
pytest-aio = { version = "*", extras = ["curio", "trio"] }
ruff = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"

[tool.pytest.ini_options]
addopts = "-xsv tests"
log_cli = true

[tool.mypy]
packages = ["muffin_jinja2"]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py39"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
]
