[bumpversion]
commit = True
current_version = 0.8.1
files = muffin_jinja2/__init__.py
tag = True
tag_name = {new_version}

[wheel]
python-tag = py3

[metadata]
name = muffin-jinja2
version = attr: muffin_jinja2.__version__
url = https://github.com/klen/muffin-jinja2
description = Support Jinja2 templates for Muffin Framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, trio, asgi, web, muffin, jinja, jinja2
project_urls = 
	Documentation = https://github.com/klen/muffin-jinja2
	Source code = https://github.com/klen/muffin-jinja2
	Issue tracker = https://github.com/klen/muffin-jinja2/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages = muffin_jinja2
include_package_data = True
python_requires = >= 3.7
install_requires = 
	muffin          >= 0.48
	jinja2          >= 2.10

[options.package_data]
muffin_jinja2 = py.typed

[options.extras_require]
tests = 
	pytest
	pytest-aio[trio,curio]
	pytest-mypy
build = 
	bump2version
	twine
	wheel

[pylama]
ignore = D210,D211,D213
linters = pep8,pep257,pyflakes

[pylama:setup.py]
ignore = D

[pylama:tests/*.py]
ignore = D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests
